# mediatool

./: .gitignore  CMakeLists.txt  README.md  version.cmake
cli/: CMakeLists.txt
cli/src/: app.cpp  app.hpp  exit_code.hpp  log.hpp  main.cpp  serialize.hpp
cli/src/command/: command.hpp  identify.cpp  identify.hpp  lab.cpp  lab.hpp  search.cpp  search.hpp
ext/: CMakeLists.txt  depzip.jsonc
lib/: CMakeLists.txt
lib/include/mediatool/: api_token_provider.hpp  entity.hpp  instance.hpp  manifest.hpp  media_directory.hpp  media_file.hpp  omdb.hpp  panic.hpp  types.hpp  util.hpp
lib/src/: build_version.hpp.in  entry.cpp  instance.cpp  log.hpp  manifest.cpp  media_directory.cpp  media_file.cpp  omdb.cpp  types.cpp  util.cpp
lib/src/detail/: http_gateway.cpp  http_gateway.hpp  identity.cpp  identity.hpp  json_io.cpp  json_io.hpp  media_file.cpp  media_file.hpp  omdb_service.cpp  omdb_service.hpp  title_parser.cpp  title_parser.hpp
